Fixes #1854 (no linebreak in Firefox) (#1909)

--- a/geonode_mapstore_client/client/themes/geonode/less/_details-panel.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_details-panel.less
@@ -504,6 +504,7 @@
             &> a {
                 margin-right: 0.5rem;
                 white-space: nowrap;
+                display: inline-block;
             }
         }
         &.gn-details-flex-field {
